modified BigInteger to Integer. Added flyway migration file