@@ -1,7 +1,6 @@
 package com.gini.validations.utility;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public enum AcceptedCurrency {
@@ -14,7 +13,7 @@ public enum AcceptedCurrency {
     public static List<String> getCurrenciesList(){
         return Stream.of(AcceptedCurrency.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
